WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301659
Temporal: Out-of-range date handled incorrectly in add()
https://bugs.webkit.org/show_bug.cgi?id=301659
Summary
Temporal: Out-of-range date handled incorrectly in add()
Tim Chevalier
Reported
2025-10-29 14:41:48 PDT
``` Temporal.PlainDate.from('+275760-01-01').add(Temporal.Duration.from('P5432M5432W')) ``` results in: ``` -271718-10-10 ``` but this should throw a RangeError, since 275760 is the maximum year and we are adding more than 12 months.
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Chevalier
Comment 1
2025-10-29 14:46:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53168
EWS
Comment 2
2025-10-31 16:26:00 PDT
Committed
302413@main
(9b21b88466cf): <
https://commits.webkit.org/302413@main
> Reviewed commits have been landed. Closing PR #53168 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-10-31 16:27:11 PDT
<
rdar://problem/163827419
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug