[Temporal] Bounds-check year in balanceISODate() https://bugs.webkit.org/show_bug.cgi?id=301659

Reviewed by Yusuke Suzuki and Sosuke Suzuki.

balanceISODate() wasn't checking for the invalid-year case, which
caused it in some cases to turn an invalid date into a valid one
(e.g. by adding months).

* JSTests/stress/temporal-plaindate.js:
(shouldBe):
* Source/JavaScriptCore/runtime/TemporalCalendar.cpp:
(JSC::TemporalCalendar::balanceISODate):

Canonical link: https://commits.webkit.org/302413@main